更新主页内容

--- a/site-files/index.html
+++ b/site-files/index.html
@@ -20,53 +20,91 @@
             </div>
         </header>
         <section>
+            <!-- 项目 demo -->
             <div class="section1">
                 <div class="inner">
                     <div class="content">
-                        <h3>Welcome to the web you never knew you wanted</h3>
+                        <h3>项目 Demo</h3>
                         <div class="icons">
                             <div class="icon">
-                                <h4>
-                                    <strong>You</strong>
-                                     own your data
-                                </h4>
-                                <img src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/icon-data.png" alt="">
-                                <p>Hidden from the
-Hoolis™ of the world</p>
+                                <h4>个人博客</h4>
+                                <img src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/icon-identity.png">
+                                <p>技术笔记
+学习记录、生活随记</p>
                             </div>
                             <div class="icon">
-                                <h4>
-                                    <strong>You</strong>
-                                     own your data
-                                </h4>
-                                <img src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/icon-identity.png" alt="">
-                                <p>Hidden from the
-Hoolis™ of the world</p>
+                                <h4>待办事项</h4>
+                                <img src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/icon-power.png">
+                                <p>待办清单
+让事情更简单、让目标更明确</p>
                             </div>
                             <div class="icon">
-                                <h4>
-                                    <strong>You</strong>
-                                     own your data
-                                </h4>
-                                <img src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/icon-power.png" alt="">
-                                <p>Hidden from the
-Hoolis™ of the world</p>
+                                <h4>在线Markdown编辑器</h4>
+                                <img src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/icon-data.png">
+                                <p>记录所有
+新知识、新技术的实验室</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
+            <!-- 项目简介 -->
             <div class="section2">
                 <div class="inner">
                     <div class="content">
-                        <h2>The Problem</h2>
+                        <h3>项目简介</h3>
+                        <div class="tabs">
+                            <div class="tab" target-content="1">
+                                <p><strong>博客/笔记本</strong></p>
+                            </div>
+                            <div class="tab" target-content="2">
+                                <p><strong>待办事项</strong></p>
+                            </div>
+                            <div class="tab" target-content="3">
+                                <p><strong>在线Markdown编辑器</strong></p>
+                            </div>
+                        </div>
+                        <div class="tab-content">
+                            <div class="content1"></div>
+                            <div class="content2"></div>
+                            <div class="content3"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 个人介绍 -->
+            <div class="section3">
+                <div class="inner">
+                    <div class="content">
+                        <h3>关于我</h3>
+
                     </div>
                 </div>
             </div>
 
         </section>
     </div>
-    <footer></footer>
+    <footer class="content-info">
+        <div class="footer">
+            <p class="social-icons">
+                <a href="https://www.github.com/ddot20xx" target="_blank">
+                    <span class="icon-wrapper">
+                        <img class="footer-icon" src="github.png" alt="github">
+                    </span>
+                </a>
+                <!-- <a href="" target="_blank">
+                    <span class="icon-wrapper">github</span>
+                </a> -->
+            </p>
+            <p class="footer-text">
+                做这个网站的目的有两个，一是记录笔记，（之前的很多笔记丢失了），二是实验一些新的知识、技术和想法。做一些自己感觉有意思的东西。。。
+            </p>
+            <p class="copywrite footer-text">
+                © 2018 www.ddot.cc All Rights Reserved.
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
