更新主页header和导航

--- a/site-files/index.html
+++ b/site-files/index.html
@@ -18,6 +18,24 @@
             <div class="video-wrapper">
                 <video class="bg-video" src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/Video_3.mp4" autoplay loop muted></video>
             </div>
+            <div class="title">
+                <h1>ddot.cc Is Here</h1>
+                <p class="sub">读书、学习、迎接美好的每一天 . . .</p>
+            </div>
+            <div class="logo-wrapper">
+                <a href="/">
+                    <img src="logo.png" id="logo">
+                </a>
+            </div>
+            <div class="header-container">
+                <div class="navbar-links">
+                    <a href="" class="navbar-link">博客</a>
+                    <span class="divider">|</span>
+                    <a href="" class="navbar-link">待办事项</a>
+                    <span class="divider">|</span>
+                    <a href="" class="navbar-link">在线Markdown编辑器</a>
+                </div>
+            </div>
         </header>
         <section>
             <!-- 项目 demo -->
